Added configurable chat colour code to the message

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: VillagerAlerts
 main: com.shields.VillagerAlerts
 version: 1.0.0
+api-version: 1.15
 permissions:
   va.admin.reload:
     description: Allow access to /vareload
